--- a/rental/templates/rental/base.html
+++ b/rental/templates/rental/base.html
@@ -23,6 +23,15 @@
     <link rel="stylesheet" href="{% static 'assets2/css/plugins/prism-coy.css' %}">
     <!-- vendor css -->
     <link rel="stylesheet" href="{% static 'assets2/css/style.css' %}">
+
+    <link
+    rel="stylesheet"
+    href="{% static 'assets1/css/bootstrap-datepicker.css' %}"
+  />
+  <link
+    rel="stylesheet"
+    href="{% static 'assets1/css/jquery.timepicker.css' %}"
+  />
     
     
 
@@ -155,7 +164,6 @@
     </script>
 
     <script src="{% static 'assets2/js/analytics.js' %}"></script>
-
 </body>
 
 </html>
