--- a/rental/templates/rental/termsandcondition.html
+++ b/rental/templates/rental/termsandcondition.html
@@ -24,7 +24,7 @@
         <p>By using our car rental service, you agree to the following terms and conditions:</p>
         <ol>
             <li>
-                If you fail to return the car at the return date specified in the rental agreement, you will be charged $5000 for each succeeding day until the car is returned.
+                If you fail to return the car at the return date specified in the rental agreement, you will be charged ₱5000 for each succeeding day until the car is returned.
             </li>
             <li>
                 You agree to return the car in the same condition it was rented out, normal wear and tear excepted. Any damages beyond normal wear and tear will be subject to additional charges based on repair costs.
