--- a/rental/templates/rental/index.html
+++ b/rental/templates/rental/index.html
@@ -6,6 +6,8 @@
     <title>AXL Rental</title>
     {% progressive_web_app_meta %}
     <meta charset="utf-8" />
+    <meta content='yes' name='apple-mobile-web-app-capable'/>
+  <meta content='yes' name='mobile-web-app-capable'/>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
