--- a/rental/templates/rental/customer/booking_details.html
+++ b/rental/templates/rental/customer/booking_details.html
@@ -39,7 +39,7 @@ AXL Rental - Details
         </div>
         <div class="billing-details">
             <h2>Transaction Details</h2>
-            <img src="{{booking.car.car_image.url}}" alt="" srcset="">
+            <img src="{{booking.car.car_image.url}}" alt="" srcset="" width="300" height="300">
             <h3><strong>Status: </strong> {{booking.booking_status}}</h3>
             <p><strong>Amount:</strong> ₱{{booking.price}}</p>
             <h5><strong>Description:</strong><b> <u> {{booking.car.car_name}} </u> </b></h5>
