--- a/rental/templates/rental/base.html
+++ b/rental/templates/rental/base.html
@@ -73,17 +73,17 @@
                         {% if request.user.driver.is_first_time %}
                         {% else %}
                             <li class="nav-item">
-                                <a href="{% url 'dashboard' %}" class="nav-link "><span class="pcoded-micon"><i class="feather icon-home"></i></span><span class="pcoded-mtext">Dashboard</span></a>
+                                <a href="{% url 'driver-dashboard' %}" class="nav-link "><span class="pcoded-micon"><i class="feather icon-home"></i></span><span class="pcoded-mtext">Current Booking</span></a>
                             </li>
                             <li class="nav-item">
-                                <a href="{% url 'dashboard' %}" class="nav-link "><span class="pcoded-micon"><i class="feather icon-book"></i></span><span class="pcoded-mtext">Pending Bookings</span></a>
+                                <a href="{% url 'pending-driver-booking' %}" class="nav-link "><span class="pcoded-micon"><i class="feather icon-book"></i></span><span class="pcoded-mtext">Pending Bookings</span></a>
                             </li>
                             <li class="nav-item">
-                                <a href="{% url 'dashboard' %}" class="nav-link "><span class="pcoded-micon"><i class="feather icon-bookmark"></i></span><span class="pcoded-mtext">Booking History</span></a>
+                                <a href="{% url 'driver-booking-history' %}" class="nav-link "><span class="pcoded-micon"><i class="feather icon-bookmark"></i></span><span class="pcoded-mtext">Booking History</span></a>
                             </li>
-                            <li class="nav-item">
+                            <!-- <li class="nav-item">
                                 <a href="{% url 'dashboard' %}" class="nav-link "><span class="pcoded-micon"><i class="feather icon-check"></i></span><span class="pcoded-mtext">Availability</span></a>
-                            </li>
+                            </li> -->
                         {% endif %}
                     {% endif %}
                 </ul>
@@ -111,7 +111,12 @@
             <ul class="navbar-nav ml-auto">
                 <li>
                     <div class="dropdown drp-user">
-                        <a href="{% url 'profile' %}" class="nav-link "><span class="pcoded-micon"><i class="feather icon-user"></i></span><span class="pcoded-mtext">Profile</span></a>
+                        {% if request.user.is_customer %}
+                            <a href="{% url 'profile' %}" class="nav-link "><span class="pcoded-micon"><i class="feather icon-user"></i></span><span class="pcoded-mtext">Profile</span></a>
+                        {% else %}
+                            <a href="{% url 'driver-profile' %}" class="nav-link "><span class="pcoded-micon"><i class="feather icon-user"></i></span><span class="pcoded-mtext">Profile</span></a>
+                        {% endif %}
+                        <!-- <a href="{% url 'profile' %}" class="nav-link "><span class="pcoded-micon"><i class="feather icon-user"></i></span><span class="pcoded-mtext">Profile</span></a> -->
                     </div>
                 </li>
                 <li>
