--- a/rental/templates/rental/admin/booking_details.html
+++ b/rental/templates/rental/admin/booking_details.html
@@ -1,4 +1,4 @@
-{% extends 'rental/base.html' %} 
+{% extends 'rental/admin/admin_base.html' %} 
 {% load static %}
 
 {% block title %} 
@@ -40,22 +40,28 @@ AXL Rental - Details
         <div class="billing-details">
             <h2>Transaction Details</h2>
             <img src="{{booking.car.car_image.url}}" alt="" srcset="" width="300" height="300">
+            {% if booking.driver %}
+                <h3><strong>Driver: </strong> {{booking.driver.driver_name}}</h3>
+                {% endif %}
             <h3><strong>Status: </strong> {{booking.booking_status}}</h3>
             <p><strong>Amount:</strong> ₱{{booking.price}}</p>
             <h5><strong>Description:</strong><b> <u> {{booking.car.car_name}} </u> </b></h5>
             <h5><strong>Schedule:</strong> {{booking.description}}</h5>
             
-            {% if request.user.is_customer %}
-                <a href="{% url 'dashboard' %}" class="btn btn-primary">Back</a>
-            {% else %}
-                <a href="{% url 'driver-dashboard' %}" class="btn btn-primary">Back</a>
+
+            <a href="{% url 'admin-dashboard' %}" class="btn btn-primary">Back</a>
+            {% if booking.customer_license_id %}
+                <img href="{{booking.customer_license_id.url}}" class="btn btn-primary" target="_blank">View License</img>
+            {% elif booking.customer_valid_id %}
+                <a href="{{booking.customer_valid_id.url}}" class="btn btn-primary" target="_blank">View Valid ID</a>
             {% endif %}
             {% if booking.booking_status == "Pending" %}
-            <a onclick="return confirm('This will also delete the booking, Are you sure to Cancel?')" href="{% url 'cancel-booking' booking.booking_id %}" class="btn btn-danger">Cancel</a>
+            <a onclick="return confirm('Are You Sure You Want to Confirm this Booking?')" href="{% url 'confirm-booking' booking.booking_id %}" class="btn btn-primary">Confirm Booking</a>
+            <a onclick="return confirm('This will also delete the booking, Are you sure to Decline?')" href="{% url 'cancel-booking' booking.booking_id %}" class="btn btn-danger">Decline Booking</a>
             <!-- <a href="{% url 'cancel-booking' booking.booking_id %}" class="btn btn-danger">Cancel</a> -->
             {% endif %}
             {% if booking.booking_status == "Returned" %}
-            <a href="{% url 'invoice' booking.booking_id %}" class="btn btn-primary" target="_blank">Invoice</a>
+                <a href="{% url 'invoice' booking.booking_id %}" class="btn btn-primary" target="_blank">Invoice</a>
             {% endif %}
         </div>
     </div>
