--- a/rental/templates/rental/index.html
+++ b/rental/templates/rental/index.html
@@ -71,7 +71,7 @@
         <a class="navbar-brand" href="{% url 'home' %}" style="color: black"
           >AXL Rental</a
         >
-        <!-- <button
+        <button
           class="navbar-toggler"
           type="button"
           data-toggle="collapse"
@@ -81,7 +81,7 @@
           aria-label="Toggle navigation"
         >
           <span class="oi oi-menu"></span> Menu
-        </button> -->
+        </button>
 
         <div class="collapse navbar-collapse" id="ftco-nav">
           <ul class="navbar-nav ml-auto">
