--- a/rental/templates/rental/login.html
+++ b/rental/templates/rental/login.html
@@ -55,6 +55,13 @@
 			</div>
 		</div>
 	</div>
+	{% if messages %}
+	{% for message in messages %}
+		<script>
+			alert("{{message}}");
+		</script>
+	{% endfor %}
+{% endif %}
 </div>
 <!-- [ auth-signin ] end -->
 
