--- a/rental/templates/rental/customer/booking.html
+++ b/rental/templates/rental/customer/booking.html
@@ -63,7 +63,7 @@ AXL Rental - Book
             </div>
             <div class="form-group form-check">
                 <input type="checkbox" class="form-check-input" id="is_toll" name="is_toll">
-                <label class="form-check-label" for="is_toll">Will you use Express Ways?</label>
+                <label class="form-check-label" for="is_toll">Do you wanna add the toll fee cost upon booking?</label>
             </div>
             <div class="form-group form-check">
                 <input type="checkbox" class="form-check-input" id="is_driver" name="is_driver" onclick="myFunction()">
