--- a/rental/templates/rental/customer/booking.html
+++ b/rental/templates/rental/customer/booking.html
@@ -51,6 +51,8 @@ AXL Rental - Book
             <div class="form-group">
                 <img src="{{car.car_image.url}}" alt="test" width="350" height="300">
             </div>
+            <h4>{{car.car_seater}} Seater</h4>
+            <h4>Car Color: {{car.car_color}}</h4>
             <div class="d-flex justify-content-between">
                 <div class="form-group mr-2">
                     <label for="" class="label">Pick-up date</label>
