--- a/rental/templates/rental/index.html
+++ b/rental/templates/rental/index.html
@@ -174,8 +174,8 @@
         <div class="row no-gutters slider-text justify-content-start align-items-center justify-content-center">
           <div class="col-lg-8 ftco-animate">
           	<div class="text w-100 text-center mb-md-5 pb-md-5">
-	            <h1 class="mb-4">Fast &amp; Easy Way To Rent A Car</h1>
-	            <p style="font-size: 18px;">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts</p>
+	            <h1 class="mb-4">Welcome to Axl Rental</h1>
+	            <p style="font-size: 18px;">Your journey starts here with top-quality vehicles and exceptional service. Let's hit the road together.</p>
             </div>
           </div>
         </div>
@@ -225,9 +225,7 @@
 	          <div class="heading-section heading-section-white pl-md-5">
 	          	<span class="subheading">Mission</span>
 	            <!-- <h2 class="mb-4">Welcome to Carbook</h2> -->
-
-	            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-	            <p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+	            <p>To provide reliable, convenient, and affordable transportation solutions to our customers, ensuring safe journeys and exceptional service at every step.</p>
 	            <p><a href="#" class="btn btn-primary py-3 px-4">Search Vehicle</a></p>
 	          </div>
 					</div>
@@ -244,9 +242,7 @@
 	          <div class="heading-section heading-section-white pl-md-5">
 	          	<span class="subheading">Vision</span>
 	            <!-- <h2 class="mb-4">Welcome to Carbook</h2> -->
-
-	            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-	            <p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+	            <p>To be the preferred choice for car rental services, recognized for our commitment to customer satisfaction, innovation in technology, and sustainability in operations, while fostering lasting relationships with our community and partners.</p>
 	            <p><a href="#" class="btn btn-primary py-3 px-4">Search Vehicle</a></p>
 	          </div>
 					</div>
