--- a/rental/templates/rental/customer/booking.html
+++ b/rental/templates/rental/customer/booking.html
@@ -113,7 +113,7 @@ AXL Rental - Book
             </div>
             <div class="form-group form-check">
                 <input type="checkbox" class="form-check-input" id="terms" name="terms" required>
-                <label class="form-check-label" for="terms">Click this that you agree with our <a href="{% url 'terms-and-conditions' %}">terms and conditions</a></label>
+                <label class="form-check-label" for="terms">Click this that you agree with our <a href="{% url 'terms-and-conditions' %}">terms and conditions</a> also in our <a href="{% url 'privacy-policy' %}">privacy and policy</a></label>
             </div>
             <button onclick="return confirm('Are you sure you want to book this car?')" type="submit" class="btn  btn-primary">Book the Car</button>
             {% if messages %}
