--- a/rental/templates/rental/index.html
+++ b/rental/templates/rental/index.html
@@ -299,6 +299,24 @@
 			</div>
 		</section>
 
+    <footer class="ftco-footer ftco-bg-dark ftco-section">
+      <div class="container">
+        <div class="row mb-5">
+          <div class="col-md">
+            <div class="ftco-footer-widget mb-4">
+            	<h2 class="ftco-heading-2">Contact Us</h2>
+            	<div class="block-23 mb-3">
+	              <ul>
+	                <li><span class="icon icon-map-marker"></span><span class="text">60 Rosas St. Twinville Subd. Nangka, Marikina City</span></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">09563310369</span></a></li>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">pipmallillin@gmail.com</span></a></li>
+	              </ul>
+	            </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <!-- loader -->
     <div id="ftco-loader" class="show fullscreen">
