--- a/rental/templates/rental/admin/update_car.html
+++ b/rental/templates/rental/admin/update_car.html
@@ -44,9 +44,33 @@ AXL Rental - Add Car
                     <label class="custom-file-label" for="car_image">Choose file</label>
                 </div>
             </div>
-            {% if customer.driver_license_valid_id %}
+            <div class="form-group form-check">
+                {% if customer.is_available %}
+                    <input type="checkbox" class="form-check-input" name="is_available" checked>
+                {% else %}
+                    <input type="checkbox" class="form-check-input" id="is_available" name="is_available">
+                {% endif %}
+                <label class="form-check-label" for="is_available">Available</label>
+            </div>
+            <div class="form-group form-check">
+                {% if customer.is_coding %}
+                    <input type="checkbox" class="form-check-input" name="is_coding" checked>
+                {% else %}
+                    <input type="checkbox" class="form-check-input" id="is_coding" name="is_coding">
+                {% endif %}
+                <label class="form-check-label" for="is_coding">License Plate Coding</label>
+            </div>
+            <div class="form-group form-check">
+                {% if customer.is_maintenance %}
+                    <input type="checkbox" class="form-check-input" name="is_maintenance" checked>
+                {% else %}
+                    <input type="checkbox" class="form-check-input" id="is_maintenance" name="is_maintenance">
+                {% endif %}
+                <label class="form-check-label" for="is_maintenance">Maintenance</label>
+            </div>
+            {% if customer.car_image %}
                 <div class="form-group">
-                    <img src="{{customer.driver_license_valid_id.url}}" alt="test" width="300" height="300">
+                    <img src="{{customer.car_image.url}}" alt="test" width="300" height="300">
                 </div>
             {% endif %}
             <button onclick="return confirm('Are you sure you want to Update this Information?')" type="submit" class="btn  btn-primary">Save</button>
