--- a/rental/templates/rental/customer/booking.html
+++ b/rental/templates/rental/customer/booking.html
@@ -99,7 +99,7 @@ AXL Rental - Book
             </div>
             <div>
                 <div class="form-check">
-                    <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="true" checked>
+                    <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="true">
                     <label class="form-check-label" for="gridRadios1">Cash</label>
                 </div>
                 <div class="form-check">
